fix paddings when content overflows

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -404,13 +404,13 @@ body {
 }
 
 .subscription--with-background {
-  padding: 94px 0;
+  padding: 94px 20px;
 
   text-align: center;
   color: #ffffff;
 
   background-image: url("../images/content/subscription-background.jpg");
-  background-size: 100% auto;
+  background-size: 100% 100%;
   background-repeat: no-repeat;
   background-color: rgba(131, 179, 211, 0.6);
 }
@@ -474,7 +474,6 @@ body {
   font-family: "PT Sans", sans-serif;
 
   padding: 15px 32px 15px 33px;
-
 
   border-radius: 0 10px 10px 0;
   border-color: transparent;
@@ -1373,7 +1372,7 @@ body {
 }
 
 .pagination {
-  width: 500px;
+  max-width: 500px;
   list-style-type: none;
   margin: 0;
   padding: 0;
@@ -1394,8 +1393,8 @@ body {
   background-color: #83b3d3;
 
   display: flex;
-  width: 55px;
-  height: 55px;
+  min-width: 55px;
+  min-height: 55px;
   flex-direction: column;
   justify-content: center;
   align-items: center;
@@ -1406,8 +1405,8 @@ body {
   color: #ffffff;
   text-decoration: none;
 
-  width: 55px;
-  height: 55px;
+  min-width: 55px;
+  min-height: 55px;
 
   display: flex;
   align-items: center;
@@ -1486,7 +1485,7 @@ body {
 }
 
 .catalog-subscription {
-  padding: 73px 0 141px;
+  padding: 73px 20px 141px;
   text-align: center;
   color: #000000;
 }
